--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -16,9 +16,9 @@ div#playground {
 }
 </style>
 <!-- using this stylesheet for the dialog -->
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-<script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
+<script src="https://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 
 
 <!-- LOCAL SCRIPT REFERENCE right now - change in production -->
