--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -22,7 +22,7 @@ div#playground {
 
 
 <!-- LOCAL SCRIPT REFERENCE right now - change in production -->
-<script src="jquery.ui.touch-punch.min.js"></script>
+<script src="scripts/jquery.ui.touch-punch.min.js"></script>
 
 <script>
 // $(function() {
@@ -61,9 +61,9 @@ $( function() {
 <div class="container" id="playground"> 
 
 
-<img id="molly" class="draggable" src="molly.jpg">
-<img id="annie" class="draggable" src="annie.jpg">
-<img id="uzi" class="draggable" src="uzidance.gif">
+<img id="molly" class="draggable" src="images/molly.jpg">
+<img id="annie" class="draggable" src="images/annie.jpg">
+<img id="uzi" class="draggable" src="images/uzidance.gif">
 
 
 <script>
