--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<title>Dragging game</title>
 <style>
 
 html,body {
@@ -10,8 +10,9 @@ html,body {
 
 div#playground {
   height: 99%;
-  width: 80%;
+  width: 90%;
   min-height:500px;
+  min-width:500px;
   background-color: powderblue;
 }
 </style>
