--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="dragtest/dragtest.html">Drag test</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="lastfm.html">Lastfm</a>
         </li>
 <!-- 
@@ -72,7 +69,7 @@
 
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">afternoon vanilla sun / crawls away across the lawn / through the phone i pull you and / drag your voice around</span>
+    <span class="text-muted">afternoon vanilla sun crawls away across the lawn / through the phone i pull you and drag your voice around</span>
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
