cant have my cool thing public... sucks.

--- a/lastfm.html
+++ b/lastfm.html
@@ -60,10 +60,13 @@
 </header>
 
 <!-- Begin page content -->
+
+<!-- there's nothing here becuase this is public - don't want an api key getting out -->
+
 <main role="main" class="flex-shrink-0">
   <div class="container">
-    <h1 class="mt-5">Last 10 songs I listened to:</h1>
-    <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt; .container</code>.</p>
+    <h1 class="mt-5">Last 25 songs I listened to:</h1>
+    <p id="songlist" class="lead">this is where last fm data would go if i had a server up to serve the info to avoid publicizing keys</p>
   </div>
 </main>
 
