--- a/lastfm.html
+++ b/lastfm.html
@@ -66,7 +66,7 @@
 <main role="main" class="flex-shrink-0">
   <div class="container">
     <h1 class="mt-5">Last 25 songs I listened to:</h1>
-    <p id="songlist" class="lead">this is where last fm data would go if i had a server up to serve the info to avoid publicizing keys</p>
+    <p id="songlist" class="lead">this is where last fm data would go if i had a server up to serve the info so i can avoid publicizing keys</p>
   </div>
 </main>
 
