--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -64,7 +64,7 @@ $( function() {
 <body>
 
 <div id="dialog" title="How to play">
-  <p>drag the images around with your mouse (desktop) or finger (mobile). <br>or don't <br>who cares</p>
+  <p>drag the images around with your mouse (desktop) or finger (mobile)</p>
 </div>
 
 <div class='box'> 
