reset positions on load

--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -96,6 +96,10 @@ function resetPositions() {
     $( "#15bluesquare3" ).offset({ top: 213, left: 226 });
 }
 
+$( document ).ready(function() {
+	resetPositions();
+});
+
 </script>
 
 </body>
