a bit of a bigger button

--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -84,7 +84,7 @@ $( function() {
 </div>
 </div>
 
-<button class="ui-button ui-widget ui-corner-all" type="button" onclick="resetPositions()">RESET POSITIONS</button>
+<button style="height:80px" class="ui-button ui-widget ui-corner-all" type="button" onclick="resetPositions()">RESET POSITIONS</button>
 
 <script>
 
