--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -5,12 +5,12 @@
 <style>
 
 html,body {
-	height: 96%;
+	height: 95%;
 }
 
 .box{
 	position: relative;
-	width: 70%;		/* desired width */
+	height: 100%;		/* desired width */
 }
 .box:before{
 	content: "";
@@ -28,6 +28,7 @@ html,body {
   	border-style: solid;
   	border-width: 2px;
 }
+
 </style>
 <!-- using this stylesheet for the dialog -->
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -68,14 +69,14 @@ $( function() {
 </head>
 
 <body>
-
 <div id="dialog" title="How to play">
   <p>Drag the images around with your mouse (desktop) or finger (mobile).</p>
 </div>
 
+
+
 <div class='box'> 
 <div class="content" id="playground"> 
-
 
 
 <img id="4_purple1_10" class="draggable" src="images/intuitiveassets/4_purple_10.png">
