--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -88,7 +88,7 @@ $( function() {
 
 </div>
 </div>
-<button style="height:80px" class="ui-button ui-widget ui-corner-all" type="button" onclick="resetPositions()">RESET POSITIONS</button>
+<button style="font-size: 20px; padding-right: 30px; padding-left: 30px; height:150px" class="ui-button ui-widget ui-corner-all" type="button" onclick="resetPositions()">RESET POSITIONS</button>
 
 
 <script>
