--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -87,6 +87,9 @@ $( function() {
 <img id="8_red_light2" class="draggable" src="images/intuitiveassets/8_red_light2.png">
 <img id="10_purple_9" class="draggable" src="images/intuitiveassets/10_purple_9.png">
 <img id="11_purple_cubes2" class="draggable" src="images/intuitiveassets/11_purple_cubes2.png">
+<img id="13_green_3" class="draggable" src="images/intuitiveassets/13_green_3.png">
+<img id="14_blue_give2" class="draggable" src="images/intuitiveassets/14_blue_give2.png">
+<img id="16_yellow_12" class="draggable" src="images/intuitiveassets/16_yellow_12.png">
 <img id="17_yellow_shop2" class="draggable" src="images/intuitiveassets/17_yellow_shop2.png">
 <img id="21_blue2_photos2" class="draggable" src="images/intuitiveassets/21_blue_photos2.png">
 <img id="29_red_16" class="draggable" src="images/intuitiveassets/29_red_16.png">
@@ -114,6 +117,9 @@ function resetPositions() {
     $( "#8_red_light2" ).css("z-index", "8");
     $( "#10_purple_9" ).css("z-index", "10");
     $( "#11_purple_cubes2" ).css("z-index", "11");
+    $( "#13_green_3" ).css("z-index", "13");
+    $( "#14_blue_give2" ).css("z-index", "14");
+    $( "#16_yellow_12" ).css("z-index", "16");
     $( "#17_yellow_shop2" ).css("z-index", "17");
     $( "#21_blue2_photos2" ).css("z-index", "21");
     $( "#29_red_16" ).css("z-index", "29");
@@ -131,6 +137,9 @@ function resetPositions() {
     $( "#8_red_light2" ).offset({ left: originLeft - 18, top: originTop + 161 });
     $( "#10_purple_9" ).offset({ left: originLeft + 59, top: originTop + 203 });
     $( "#11_purple_cubes2" ).offset({ left: originLeft + 176, top: originTop + 220 });
+    $( "#13_green_3" ).offset({ left: originLeft + 278, top: originTop + 148 });
+    $( "#14_blue_give2" ).offset({ left: originLeft + 256, top: originTop + 43 });
+    $( "#16_yellow_12" ).offset({ left: originLeft + 251, top: originTop + 75 });
     $( "#17_yellow_shop2" ).offset({ left: originLeft + 60, top: originTop + 3 });
     $( "#21_blue2_photos2" ).offset({ left: originLeft + 22, top: originTop + 117 });
     $( "#29_red_16" ).offset({ left: originLeft + 276, top: originTop + 207 });
