--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -91,7 +91,11 @@ $( function() {
 <img id="14_blue_give2" class="draggable" src="images/intuitiveassets/14_blue_give2.png">
 <img id="16_yellow_12" class="draggable" src="images/intuitiveassets/16_yellow_12.png">
 <img id="17_yellow_shop2" class="draggable" src="images/intuitiveassets/17_yellow_shop2.png">
+<img id="19_green_ask2" class="draggable" src="images/intuitiveassets/19_green_ask2.png">
 <img id="21_blue2_photos2" class="draggable" src="images/intuitiveassets/21_blue_photos2.png">
+<img id="23_red_2" class="draggable" src="images/intuitiveassets/23_red_2.png">
+<img id="24_purple_1" class="draggable" src="images/intuitiveassets/24_purple_1.png">
+<img id="25_yellow_6" class="draggable" src="images/intuitiveassets/25_yellow_6.png">
 <img id="29_red_16" class="draggable" src="images/intuitiveassets/29_red_16.png">
 <img id="32_green_phone2" class="draggable" src="images/intuitiveassets/32_green_phone2.png">
 </div>
@@ -121,7 +125,11 @@ function resetPositions() {
     $( "#14_blue_give2" ).css("z-index", "14");
     $( "#16_yellow_12" ).css("z-index", "16");
     $( "#17_yellow_shop2" ).css("z-index", "17");
+    $( "#19_green_ask2" ).css("z-index", "19");
     $( "#21_blue2_photos2" ).css("z-index", "21");
+    $( "#23_red_2" ).css("z-index", "23");
+    $( "#24_purple_1" ).css("z-index", "24");
+    $( "#25_yellow_6" ).css("z-index", "25");
     $( "#29_red_16" ).css("z-index", "29");
     $( "#32_green_phone2" ).css("z-index", "32");
     
@@ -141,7 +149,11 @@ function resetPositions() {
     $( "#14_blue_give2" ).offset({ left: originLeft + 256, top: originTop + 43 });
     $( "#16_yellow_12" ).offset({ left: originLeft + 251, top: originTop + 75 });
     $( "#17_yellow_shop2" ).offset({ left: originLeft + 60, top: originTop + 3 });
+    $( "#19_green_ask2" ).offset({ left: originLeft + 6, top: originTop + 45 });
     $( "#21_blue2_photos2" ).offset({ left: originLeft + 22, top: originTop + 117 });
+    $( "#23_red_2" ).offset({ left: originLeft + 75, top: originTop + 54 });
+    $( "#24_purple_1" ).offset({ left: originLeft + 223, top: originTop + 32 });
+    $( "#25_yellow_6" ).offset({ left: originLeft + 82, top: originTop + 209 });
     $( "#29_red_16" ).offset({ left: originLeft + 276, top: originTop + 207 });
     $( "#32_green_phone2" ).offset({ left: originLeft + 154 , top: originTop + 85 });
     
