i think this is all the squares

--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -96,6 +96,9 @@ $( function() {
 <img id="23_red_2" class="draggable" src="images/intuitiveassets/23_red_2.png">
 <img id="24_purple_1" class="draggable" src="images/intuitiveassets/24_purple_1.png">
 <img id="25_yellow_6" class="draggable" src="images/intuitiveassets/25_yellow_6.png">
+<img id="26_yellow_4" class="draggable" src="images/intuitiveassets/26_yellow_4.png">
+<img id="27_blue_13" class="draggable" src="images/intuitiveassets/27_blue_13.png">
+<img id="28_blue_14" class="draggable" src="images/intuitiveassets/28_blue_14.png">
 <img id="29_red_16" class="draggable" src="images/intuitiveassets/29_red_16.png">
 <img id="32_green_phone2" class="draggable" src="images/intuitiveassets/32_green_phone2.png">
 </div>
@@ -130,6 +133,9 @@ function resetPositions() {
     $( "#23_red_2" ).css("z-index", "23");
     $( "#24_purple_1" ).css("z-index", "24");
     $( "#25_yellow_6" ).css("z-index", "25");
+    $( "#26_yellow_4" ).css("z-index", "26");
+    $( "#27_blue_13" ).css("z-index", "27");
+    $( "#28_blue_14" ).css("z-index", "28");
     $( "#29_red_16" ).css("z-index", "29");
     $( "#32_green_phone2" ).css("z-index", "32");
     
@@ -154,6 +160,9 @@ function resetPositions() {
     $( "#23_red_2" ).offset({ left: originLeft + 75, top: originTop + 54 });
     $( "#24_purple_1" ).offset({ left: originLeft + 223, top: originTop + 32 });
     $( "#25_yellow_6" ).offset({ left: originLeft + 82, top: originTop + 209 });
+    $( "#26_yellow_4" ).offset({ left: originLeft + 82, top: originTop + 127 });
+    $( "#27_blue_13" ).offset({ left: originLeft + 288, top: originTop + 124 });
+    $( "#28_blue_14" ).offset({ left: originLeft + 171, top: originTop + 225 });
     $( "#29_red_16" ).offset({ left: originLeft + 276, top: originTop + 207 });
     $( "#32_green_phone2" ).offset({ left: originLeft + 154 , top: originTop + 85 });
     
