--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -8,6 +8,10 @@ html,body {
 	height: 90%;
 }
 
+.draggable {
+	position:absolute;
+}
+
 .box{
 	position: relative;
 	height: 100%;		/* desired width */
