--- a/dragtest/dragtest_iframesimple.html
+++ b/dragtest/dragtest_iframesimple.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<iframe id="dragframe" src="dragtest_nobutton.html" height="800px" width="800px"></iframe>
-<br><button style="font-size: 20px; font-weight: bold; padding-right: 30px; padding-left: 30px; height:150px" class="ui-button ui-widget ui-corner-all" type="button" onclick="resetPositions()">RESET POSITIONS</button>
+<iframe id="dragframe" src="dragtest_nobutton.html" height="600px" width="600px"></iframe>
+<br><button style="font-size: 20px; font-weight: bold; padding-right: 30px; padding-left: 30px; height:150px" class="ui-button ui-widget ui-corner-all" type="button" onclick="window.frames['dragframe'].resetPositions();">RESET POSITIONS</button>
 
 
 </body>
