--- a/dragtest/dragtest_nobutton.html
+++ b/dragtest/dragtest_nobutton.html
@@ -8,6 +8,10 @@ html,body {
 	height: 98%;
 }
 
+.draggable {
+	position:absolute;
+}
+
 .box{
 	position: relative;
 	height: 100%;		/* desired width */
