no more dialog - text is on the page

--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -24,21 +24,25 @@ html,body {
   flex-wrap: wrap;
   align-content: stretch;
   flex-direction: column;
-  /* background-color: DodgerBlue; */
 }
 
 .flex-container > div {
-  /* background-color: #ffffff; */
   width: 99%;
   margin: 2px;
   text-align: center;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  font-size: 18px;
+  line-height: 30px;
 }
 
 #playground {
 	flex-grow: 9.5;
 }
+#instruction_div {
+	flex-grow: .25
+}
 #reset_div {
-	flex-grow: .5;
+	flex-grow: .25;
 }
 #reset_img {
 	cursor: pointer;
@@ -52,22 +56,19 @@ html,body {
 <body>
 
 <script>
-// $(function() {
-// 	$( "#draggable" ).draggable();
-// });
-
-// dragging happens here
 var top_z = 100;
+var instruction_visible = true;
 $(function() {
-	$( ".draggable" ).draggable({ // . = class, $ = id
+	$( ".draggable" ).draggable({
 		containment: "parent", // limit the dragging to within the parent container (the playground div)
 		scroll: false,
 		start: function() {
 			this.style.zIndex = ++top_z;
+			if (instruction_visible) {
+				$( "#instruction_div" ).text( " " );
+				instruction_visible = false;
+			}
 		}
-// 		stop: function() { // this is a listener for when the dragging has stopped
-// 			var pos = $( ".draggable" ).position();
-//   		}
   	});
 });
 
@@ -76,6 +77,7 @@ $(document).on("click",".draggable", function (event) {
 });
 </script>
 
+<!-- 
 <script>
 $( function() {
 	$( "#dialog" ).dialog();
@@ -85,14 +87,8 @@ $( function() {
 <div id="dialog" title="How to play">
   <p>Drag the images around with your mouse (desktop) or finger (mobile).</p>
 </div>
-
-
-<!-- 
-<div class="flex-container">
-  <div id="playground">1</div>
-  <div style="flex-grow: 0.5" >2</div>
-</div>
  -->
+
 
 <div class='flex-container'> 
 	<div class="content" id="playground">
@@ -119,8 +115,11 @@ $( function() {
 		<img id="29_red_16" class="draggable" src="images/intuitiveassets/29_red_16.png">
 		<img id="32_green_phone2" class="draggable" src="images/intuitiveassets/32_green_phone2.png">
 	</div>
+	<div id="instruction_div">
+		Drag the images around with your mouse (desktop) or finger (mobile).
+	</div>
 	<div id="reset_div">
-		<img src="images/intuitiveassets/reset.png" id="reset_img" alt="Reset positions" onclick="resetPositions()" width="75px" height="86px">
+		<img src="images/intuitiveassets/reset.png" id="reset_img" alt="Reset positions" onclick="resetPositions()" height="60px" >
 	</div>
 </div>
 
@@ -191,11 +190,10 @@ function resetPositions() {
     $( "#29_red_16" ).offset({ left: originLeft + 276, top: originTop + 207 });
     $( "#32_green_phone2" ).offset({ left: originLeft + 154 , top: originTop + 85 });
     
-//     $( "#4_purple1_10" ).offset({ left: 160, top: 160 });
-//     $( "#16_yellow3_shop2" ).offset({ left: 220, top: 165 });
-//     $( "#20_blue2_photos2" ).offset({ left: 182, top: 277 });
-//     $( "#28_red_16" ).offset({ left: 436, top: 367 });
-//     $( "#32_green_phone2" ).offset({ left: 314, top: 245 });
+    
+	$( "#instruction_div" ).text( "Drag the images around with your mouse (desktop) or finger (mobile)." );
+	instruction_visible = true;
+	
 }
 
 
