--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <li class="nav-item">
           <a class="nav-link" href="lastfm.html">Lastfm</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="darkmode.html">Dark mode?</a>
+        </li>
 <!-- 
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
