--- a/dragtest/dragtest.html
+++ b/dragtest/dragtest.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 
-<!-- using this stylesheet for the dialog -->
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<!-- <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
 <script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
 <script src="https://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 <script src="scripts/jquery.ui.touch-punch.min.js"></script>
