--- a/cartitext.html
+++ b/cartitext.html
@@ -30,11 +30,12 @@ function cartify() {
 	cartiOutput = "";
 	var wordSeperator = ""; // could be just a space, or *+ or !.. or :( etc....
 	var rand = 1;
+	var lastWordSeperated = false;
 	for (var i = 0; i < words.length; i++) {
-		// probability 1/3 that there will be some sort of non-space seperator after a word
+		// probability 1/2 that there will be some sort of non-space seperator after a word
 		// if the last word has a seperator, this one won't
-		rand = Math.floor(Math.random() * 3);
-		if (rand == 2) {
+		rand = Math.floor(Math.random() * 2);
+		if (rand == 1 && !lastWordSeperated) {
 			// 10 different options of what the seperator can be
 			rand = Math.floor(Math.random() * 11);
 			if (rand == 0) {
@@ -44,7 +45,7 @@ function cartify() {
 			} else if (rand == 2) {
 				wordSeperator = " +* ";
 			} else if (rand == 3) {
-				wordSeperator = "! ";
+				wordSeperator = "\! ";
 			} else if (rand == 4) {
 				wordSeperator = " +:) ";
 			} else if (rand == 5) {
@@ -60,8 +61,10 @@ function cartify() {
 			} else if (rand == 10) {
 				wordSeperator = " :( 💕 ";
 			}
+			lastWordSeperated = true;
 		} else { // otherwise it's just a space
 			wordSeperator = " ";
+			lastWordSeperated = false;
 		}
 		cartiOutput += words[i] + wordSeperator;
 	}
@@ -102,23 +105,22 @@ function cartify() {
 </head>
 <body>
 
+<h1>a ! 🖤 playboi carti 🖤^! text generator +:)
+<br> by *+ lance encarnado ++** </h1>
 
-
-<textarea id="userinput" rows="10" cols="70">
+<textarea id="userinput" placeholder="enter your plain text here..." rows="10" cols="70">
 </textarea>
 <br><br>
 <div id="caseselection">
-  <input type="radio" id="upper" name="case" value="upper" checked="checked"> all uppercase
-  <input type="radio" id="lower" name="case" value="lower"> all lowercase
-  <input type="radio" id="nochange" name="case" value="nochange"> no case change 
+	<input type="radio" id="lower" name="case" value="lower" checked="checked"> all lowercase
+  	<input type="radio" id="upper" name="case" value="upper"> all uppercase
+  	<input type="radio" id="nochange" name="case" value="nochange"> no case change 
 </div>
 <br><button onclick="cartify()">dothatshit!</button>
 
-<br><br><br><br>
-the * carti version ! :( *^: 
-<br><br>
+<br><br><br>
 <div id="cartitext">
-asd
+your ! carti text . will :( !^ appear here ++** 🦋
 </div>
 
 </body>
