gotta switch the font up

--- a/cartitext.html
+++ b/cartitext.html
@@ -2,6 +2,10 @@
 <head>
 
 <style>
+body {
+   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 300;
+}
 body::after  {
   content: "";
   background: url("gunnertext.jpg");
@@ -15,6 +19,8 @@ body::after  {
   background-position: center;
   z-index: -1;
 }
+
+
 </style>
 
 <script type="text/javascript">
@@ -106,7 +112,7 @@ function cartify() {
 <body>
 
 <h1>a ! 🖤 playboi carti 🖤^! text generator +:)
-<br> by *+ lance encarnado ++** </h1>
+<br> by *+ @lscorrcho ++** </h1>
 
 <textarea id="userinput" placeholder="enter your plain text here..." rows="10" cols="70">
 </textarea>
