--- a/cartitext.html
+++ b/cartitext.html
@@ -13,6 +13,7 @@ by lance encarnado (2019)
 body {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
+   width: 100%;
 }
 body::after  {
   content: "";
